TWC3167-3228, TWC3167-3796 : Deal editor - Badge font size changes, Manager exclude groups word wrap Fixes - UI Bug Fixes (#1538)

--- a/Intel.MyDeals/Client/src/app/admin/kendo_grid.css
+++ b/Intel.MyDeals/Client/src/app/admin/kendo_grid.css
@@ -895,3 +895,7 @@ kendo-grid.grid_fix {
     display: block !important;
     left: 0 !important
 }
+
+kendo-grid.security-engine-tables .k-grid-content {
+    overflow: overlay;
+}
